# Herramientas-de-software-para-control-de-Pololu-3Pi-con-ROS2-y-micro-ROS-en-el-ESP32

./: README.md
MicroRos firmware/: platformio.ini
MicroRos firmware/src/: main.cpp
ros2_ws/: readMe
ros2_ws/logs_multi_pose/: pose_log_pololu_11_pose.csv  pose_log_pololu_12_pose.csv  pose_log_pololu_13_pose.csv  pose_log_pololu_3_pose.csv  pose_log_pololu_4_pose.csv  pose_log_pololu_5_pose.csv  pose_log_pololu_6_pose.csv  pose_log_pololu_7_pose.csv  pose_log_pololu_8_pose.csv  pose_log_pololu_9_pose.csv
ros2_ws/maps/: map.pgm  map.yaml
ros2_ws/src/map_generator/: package.xml  setup.py
ros2_ws/src/map_generator/map_generator/: map_generator_node.py
ros2_ws/src/pololu_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/pololu_controller/config/: params.yaml
ros2_ws/src/pololu_controller/launch/: multi_controller_launch.py
ros2_ws/src/pololu_controller/pololu_controller/: cp2p_pololu.py  demo_chain_follower.py  multi_agent_controller.py
