<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pololu_controller</name>
  <version>0.0.0</version>
  <description>Point-to-point controller for Pololu 3pi with exponential PID</description>
  <maintainer email="bryanred431@gmail.com">bryan</maintainer>
  <license>TODO: License declaration</license>

   <!-- Dependencias de build y runtime -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Dependencias opcionales (si después usas odometría o tf) -->
  <!-- <depend>nav_msgs</depend> -->
  <!-- <depend>tf_transformations</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
